<resources>
    <string name="app_name">Hitung Nilai Akhir</string>
    <string name="judul">Hitung Jitu Nilai</string>
    <string name="nama_siswa">Nama: %1$s</string>
    <string name="nama">Nama</string>
    <string name="hadir_nilai">Nilai Kehadiran</string>
    <string name="tugas_nilai">Nilai Tugas</string>
    <string name="uts_nilai">Nilai UTS</string>
    <string name="uas_nilai">Nilai UAS</string>
    <string name="hitung_nilai">Hitung</string>
    <string name="akhir_nilai">Nilai Akhir</string>
    <string name="huruf_nilai">Nilai Huruf</string>
    <string name="akhir_n">Nilai Akhir: %1$.2f</string>
    <string name="huruf_n">Nilai Huruf: %1$s</string>
    <string name="nilai_a">A</string>
    <string name="nilai_b">B</string>
    <string name="nilai_c">C</string>
    <string name="reset_n">reset</string>
    <string name="saran_n">Lihar Saran</string>
    <string name="nama_invalid">Nama Tidak Boleh Kosong</string>
    <string name="hadir_invalid">Hadir Tidak Boleh Kosong</string>
    <string name="tugas_invalid">Tugas Tidak Boleh Kosong</string>
    <string name="uts_invalid">Uts Tidak Boleh Kosong</string>
    <string name="uas_invalid">Uas Tidak Boleh Kosong</string>
    <string name="bagi_n">bagikan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="about">Aplikasi hitung jitu nilai adalah aplikasi yang dibuat untuk mempermudah para civitas pengajar untuk menilai hasil nilai akhir siswa ataupun mahasiswa. /n Aplikasi ini dapat menginput data berupa nama, nilai kehadiran, nilai tugas, nilai UTS, nilai UAS. Dimana nantikan nilai yang input akan dihitung dan akan dihasilkan nilai akhirnya oleh aplikasi ini.Nilai-niali tersebut dibagi berdasarkan ketentuan yang telah di atur pada aplikasi yaitu nilai kehadiran akan di kali 0,20, nilai tugas di kali 0,25, nilai UTS di kali 0,25 dan nilai UAS dikali 0,30 lalu dijumlahkan dan di bagi dengan jumlah point nilai yang ada. \n\nCopyright © 2023 Tiara Siahaan.\nAll rights reserved.</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="hasil_x">%1$s - %2$s</string>
    <string name="data_x">%1$.1f</string>
    <string name="konfirmasi_hapus">Komfirmasi Hapus Histori</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="histori">Histori</string>
    <string name="bagikan_template">Nama: %1$s kg\nNilai Akhir: %2$s cm\nKategori Nilai: %3$s</string>
    <string name="saran_B">Cobalah untuk tetap belajar hal hal yang kamu sukai dan tingkatkan nilai kamu.</string>
    <string name="saran_A">Pertahankan nilaimu! Tapi jangan sampai lalai dalam hal belajar.</string>
    <string name="saran_C">Cobalah mulai belajar hal-hal dasar agar nilai kamu bisa meningkat.</string>
    <string name="judul_B">Mengatasi Kekurangan Nilai</string>
    <string name="judul_A">Menjaga Nilai Tetap Bagus</string>
    <string name="judul_C">Mengatasi Kekurangan Nilai</string>

</resources>